  _GNU_SOURCE are defined, MINSIGSTKSZ and SIGSTKSZ are no longer
  constant on Linux.  MINSIGSTKSZ is redefined to sysconf(_SC_MINSIGSTKSZ)
  and SIGSTKSZ is redefined to sysconf (_SC_SIGSTKSZ).

Deprecated and removed features, and other changes affecting compatibility:

  [Add deprecations, removals and changes affecting compatibility here]

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

  [Add security related changes here]

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]


Version 2.33

Major new features:

* The dynamic linker accepts the --list-tunables argument which prints
  all the supported tunables.  This option is disable if glibc is
  configured with tunables disabled (--enable-tunables=no).

* The dynamic linker accepts the --argv0 argument and provides opportunity
  to change argv[0] string.

* The dynamic linker loads optimized implementations of shared objects
  from subdirectories under the glibc-hwcaps directory on the library
  search path if the system's capabilities meet the requirements for
  that subdirectory.  Initially supported subdirectories include
  "power9" and "power10" for the powerpc64le-linux-gnu architecture,
  "z13", "z14", "z15" for s390x-linux-gnu, and "x86-64-v2", "x86-64-v3",
  "x86-64-v4" for x86_64-linux-gnu.  In the x86_64-linux-gnu case, the
  subdirectory names correspond to the vendor-independent x86-64
  microarchitecture levels defined in the x86-64 psABI supplement.

* The new --help option of the dynamic linker provides usage and
  information and library search path diagnostics.

* The mallinfo2 function is added to report statistics as per mallinfo,
  but with larger field widths to accurately report values that are
  larger than fit in an integer.

* Add <sys/platform/x86.h> to provide query macros for x86 CPU features.
